# piss

./: README.md  pyproject.toml
example/: generate.py
example_backend/: generate.py
piss/: __init__.py  analysis.py  lex.py  node.py  parse.py
tests/: __init__.py  test_lex.py  test_lex_parse.py  test_parse.py
