[tool.poetry]
name = "piss"
version = "0.1.0"
description = ""
authors = ["bwburnsides <19192452+bwburnsides@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
pytest = "^7.2.2"
